--- a/src/com/wolfe/TicketForm.form
+++ b/src/com/wolfe/TicketForm.form
@@ -8,22 +8,6 @@
     <properties/>
     <border type="none" title="Trouble Ticket Application" title-justification="2"/>
     <children>
-      <component id="8c7e9" class="javax.swing.JTable" binding="resolvedTicket">
-        <constraints>
-          <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="97065" class="javax.swing.JTable" binding="openTicket">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="617f6" class="javax.swing.JTextField" binding="openTicketsTextField" default-binding="true">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -108,6 +92,32 @@
         </constraints>
         <properties/>
       </component>
+      <scrollpane id="be3ea">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="97065" class="javax.swing.JTable" binding="openTicket">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <scrollpane id="fec36">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="8c7e9" class="javax.swing.JTable" binding="resolvedTicket">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
