--- a/src/com/wolfe/TicketForm.form
+++ b/src/com/wolfe/TicketForm.form
@@ -1,35 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.wolfe.TicketForm">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="9" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="591" height="400"/>
+      <xy x="20" y="20" width="629" height="400"/>
     </constraints>
     <properties/>
     <border type="none" title="Trouble Ticket Application" title-justification="2"/>
     <children>
-      <component id="617f6" class="javax.swing.JTextField" binding="openTicketsTextField" default-binding="true">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <horizontalAlignment value="0"/>
-          <text value="Open Tickets"/>
-        </properties>
-      </component>
-      <component id="60711" class="javax.swing.JTextField" binding="resolvedTicketsTextField" default-binding="true">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <horizontalAlignment value="0"/>
-          <text value="Resolved Tickets"/>
-        </properties>
-      </component>
       <component id="2e868" class="javax.swing.JTextField" binding="descriptionTF">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -78,20 +56,23 @@
       </component>
       <scrollpane id="be3ea">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
           <component id="97065" class="javax.swing.JTable" binding="openTicket">
             <constraints/>
-            <properties/>
+            <properties>
+              <autoscrolls value="true"/>
+              <minimumSize width="10" height="32"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
       <scrollpane id="fec36">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -141,6 +122,28 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="617f6" class="javax.swing.JTextField" binding="openTicketsTextField" default-binding="true">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="0"/>
+          <text value="Open Tickets"/>
+        </properties>
+      </component>
+      <component id="60711" class="javax.swing.JTextField" binding="resolvedTicketsTextField" default-binding="true">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="0"/>
+          <text value="Resolved Tickets"/>
+        </properties>
       </component>
     </children>
   </grid>
