--- a/src/com/wolfe/TicketGUI.form
+++ b/src/com/wolfe/TicketGUI.form
@@ -54,32 +54,24 @@
         </constraints>
         <properties/>
       </component>
-      <scrollpane id="be3ea">
-        <constraints>
-          <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="97065" class="javax.swing.JTable" binding="openTicket">
-            <constraints/>
-            <properties>
-              <autoscrolls value="true"/>
-              <minimumSize width="10" height="32"/>
-            </properties>
-          </component>
-        </children>
-      </scrollpane>
       <scrollpane id="fec36">
         <constraints>
           <grid row="8" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <horizontalScrollBarPolicy value="30"/>
+          <verticalScrollBarPolicy value="20"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="8c7e9" class="javax.swing.JTable" binding="resolvedTicket">
             <constraints/>
-            <properties/>
+            <properties>
+              <autoCreateRowSorter value="false"/>
+              <autoResizeMode value="3"/>
+              <fillsViewportHeight value="true"/>
+              <minimumSize width="30" height="32"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
@@ -145,6 +137,32 @@
           <text value="Resolved Tickets"/>
         </properties>
       </component>
+      <scrollpane id="be3ea">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="25" height="21"/>
+            <preferred-size width="400" height="375"/>
+            <maximum-size width="3500" height="3500"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalScrollBarPolicy value="30"/>
+          <verticalScrollBarPolicy value="20"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="97065" class="javax.swing.JTable" binding="openTicket">
+            <constraints/>
+            <properties>
+              <autoResizeMode value="3"/>
+              <autoscrolls value="true"/>
+              <fillsViewportHeight value="true"/>
+              <minimumSize width="5" height="32"/>
+              <preferredSize width="150" height="32"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
